--- a/api/package.json
+++ b/api/package.json
@@ -8,10 +8,14 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
     "git-commit-msg-linter": "^4.4.0",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
