chore: created tables with mongo and docker

--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -20,7 +20,7 @@
     "rules": {
         "indent": [
             "error",
-            4
+            2
         ],
         "linebreak-style": [
             "error",
@@ -28,7 +28,7 @@
         ],
         "quotes": [
             "error",
-            "single"
+            "double"
         ],
         "semi": [
             "error",
