--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js",
+    "dev": "nodemon src/index.ts",
     "build": "tsc"
   },
   "devDependencies": {
@@ -13,9 +13,12 @@
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
     "git-commit-msg-linter": "^4.4.0",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.7.5"
   }
 }
