--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^6.7.5"
+    "mongoose": "^6.7.5",
+    "multer": "^1.4.5-lts.1"
   }
 }
