--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -24,6 +24,7 @@
             "error",
             2
         ],
+        "react/react-in-jsx-scope": "off",
         "linebreak-style": [
             "error",
             "unix"
