--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@types/node": "^18.11.10",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@types/styled-components": "^5.1.26",
@@ -23,6 +24,7 @@
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vite-tsconfig-paths": "^3.6.0"
   }
 }
